Sharp edge attribute gets cleared if all edges of mesh are sharp #105926

Closed
opened 2023-03-20 16:26:13 +01:00 by Sun Kim · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.1.230305

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-20 00:12, hash: 7cda559d7c1b
Worked: 3.6.0 2023-03-08 01:06 809a336a3d67

Most relevant cause commit: 5876573e14

Short description of error
Sharp edge attribute gets cleared if all edges of the mesh are sharp.

Exact steps for others to reproduce the error

  • From the startup file, switch to edit mode with the cube
  • While all elements are selected, do Edge > Mark Sharp
  • Switch to object mode, and then back to edit mode
  • Sharp edges are gone

MissingSharpEdges.mp4

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.1.230305 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-20 00:12, hash: `7cda559d7c1b` Worked: 3.6.0 2023-03-08 01:06 `809a336a3d67` Most relevant cause commit: 5876573e14 **Short description of error** Sharp edge attribute gets cleared if all edges of the mesh are sharp. **Exact steps for others to reproduce the error** - From the startup file, switch to edit mode with the cube - While all elements are selected, do `Edge > Mark Sharp` - Switch to object mode, and then back to edit mode - Sharp edges are gone [MissingSharpEdges.mp4](/attachments/a10662dc-30cc-4538-98d6-495a0f40ba7e)
Sun Kim added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-20 16:26:14 +01:00

Confirmed and a bisect actually points to 5669c5a61b (??)

CC @HooglyBoogly

Confirmed and a bisect actually points to 5669c5a61b2f049ec1b55cf045221b24095b9df2 (??) CC @HooglyBoogly
Jesse Yurkovich added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-03-20 23:10:25 +01:00
Brecht Van Lommel added this to the 3.6 LTS milestone 2023-03-20 23:31:32 +01:00
Hans Goudey removed the
Type
Report
label 2023-03-21 01:30:41 +01:00
Blender Bot added the
Status
Resolved
label 2023-03-21 01:30:41 +01:00
Hans Goudey added the
Type
Bug
label 2023-03-21 01:30:41 +01:00
Blender Bot removed the
Status
Confirmed
label 2023-03-21 01:30:42 +01:00
Member

Thanks for the report and the bisect!

Thanks for the report and the bisect!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105926
No description provided.